wolf_deps/lz4/src/ffi/lz4frame.rs

/* automatically generated by rust-bindgen 0.59.2 */

pub const LZ4F_VERSION: u32 = 100;
pub const LZ4F_HEADER_SIZE_MIN: u32 = 7;
pub const LZ4F_HEADER_SIZE_MAX: u32 = 19;
pub const LZ4F_BLOCK_HEADER_SIZE: u32 = 4;
pub const LZ4F_BLOCK_CHECKSUM_SIZE: u32 = 4;
pub const LZ4F_CONTENT_CHECKSUM_SIZE: u32 = 4;
pub const LZ4F_MIN_SIZE_TO_KNOW_HEADER_LENGTH: u32 = 5;
pub type size_t = ::std::os::raw::c_ulong;
pub type wchar_t = ::std::os::raw::c_int;
pub type max_align_t = u128;
pub type LZ4F_errorCode_t = size_t;
extern "C" {
    pub fn LZ4F_isError(code: LZ4F_errorCode_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn LZ4F_getErrorName(code: LZ4F_errorCode_t) -> *const ::std::os::raw::c_char;
}
pub const LZ4F_blockSizeID_t_LZ4F_default: LZ4F_blockSizeID_t = 0;
pub const LZ4F_blockSizeID_t_LZ4F_max64KB: LZ4F_blockSizeID_t = 4;
pub const LZ4F_blockSizeID_t_LZ4F_max256KB: LZ4F_blockSizeID_t = 5;
pub const LZ4F_blockSizeID_t_LZ4F_max1MB: LZ4F_blockSizeID_t = 6;
pub const LZ4F_blockSizeID_t_LZ4F_max4MB: LZ4F_blockSizeID_t = 7;
pub type LZ4F_blockSizeID_t = ::std::os::raw::c_uint;
pub const LZ4F_blockMode_t_LZ4F_blockLinked: LZ4F_blockMode_t = 0;
pub const LZ4F_blockMode_t_LZ4F_blockIndependent: LZ4F_blockMode_t = 1;
pub type LZ4F_blockMode_t = ::std::os::raw::c_uint;
pub const LZ4F_contentChecksum_t_LZ4F_noContentChecksum: LZ4F_contentChecksum_t = 0;
pub const LZ4F_contentChecksum_t_LZ4F_contentChecksumEnabled: LZ4F_contentChecksum_t = 1;
pub type LZ4F_contentChecksum_t = ::std::os::raw::c_uint;
pub const LZ4F_blockChecksum_t_LZ4F_noBlockChecksum: LZ4F_blockChecksum_t = 0;
pub const LZ4F_blockChecksum_t_LZ4F_blockChecksumEnabled: LZ4F_blockChecksum_t = 1;
pub type LZ4F_blockChecksum_t = ::std::os::raw::c_uint;
pub const LZ4F_frameType_t_LZ4F_frame: LZ4F_frameType_t = 0;
pub const LZ4F_frameType_t_LZ4F_skippableFrame: LZ4F_frameType_t = 1;
pub type LZ4F_frameType_t = ::std::os::raw::c_uint;
#[doc = " LZ4F_frameInfo_t :"]
#[doc = "  makes it possible to set or read frame parameters."]
#[doc = "  Structure must be first init to 0, using memset() or LZ4F_INIT_FRAMEINFO,"]
#[doc = "  setting all parameters to default."]
#[doc = "  It's then possible to update selectively some parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_frameInfo_t {
    pub blockSizeID: LZ4F_blockSizeID_t,
    pub blockMode: LZ4F_blockMode_t,
    pub contentChecksumFlag: LZ4F_contentChecksum_t,
    pub frameType: LZ4F_frameType_t,
    pub contentSize: ::std::os::raw::c_ulonglong,
    pub dictID: ::std::os::raw::c_uint,
    pub blockChecksumFlag: LZ4F_blockChecksum_t,
}
#[test]
fn bindgen_test_layout_LZ4F_frameInfo_t() {
    assert_eq!(
        ::std::mem::size_of::<LZ4F_frameInfo_t>(),
        32usize,
        concat!("Size of: ", stringify!(LZ4F_frameInfo_t))
    );
    assert_eq!(
        ::std::mem::align_of::<LZ4F_frameInfo_t>(),
        8usize,
        concat!("Alignment of ", stringify!(LZ4F_frameInfo_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).blockSizeID as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(blockSizeID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).blockMode as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(blockMode)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).contentChecksumFlag as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(contentChecksumFlag)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).frameType as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(frameType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).contentSize as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(contentSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).dictID as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(dictID)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_frameInfo_t>())).blockChecksumFlag as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_frameInfo_t),
            "::",
            stringify!(blockChecksumFlag)
        )
    );
}
#[doc = " LZ4F_preferences_t :"]
#[doc = "  makes it possible to supply advanced compression instructions to streaming interface."]
#[doc = "  Structure must be first init to 0, using memset() or LZ4F_INIT_PREFERENCES,"]
#[doc = "  setting all parameters to default."]
#[doc = "  All reserved fields must be set to zero."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_preferences_t {
    pub frameInfo: LZ4F_frameInfo_t,
    pub compressionLevel: ::std::os::raw::c_int,
    pub autoFlush: ::std::os::raw::c_uint,
    pub favorDecSpeed: ::std::os::raw::c_uint,
    pub reserved: [::std::os::raw::c_uint; 3usize],
}
#[test]
fn bindgen_test_layout_LZ4F_preferences_t() {
    assert_eq!(
        ::std::mem::size_of::<LZ4F_preferences_t>(),
        56usize,
        concat!("Size of: ", stringify!(LZ4F_preferences_t))
    );
    assert_eq!(
        ::std::mem::align_of::<LZ4F_preferences_t>(),
        8usize,
        concat!("Alignment of ", stringify!(LZ4F_preferences_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_preferences_t>())).frameInfo as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_preferences_t),
            "::",
            stringify!(frameInfo)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_preferences_t>())).compressionLevel as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_preferences_t),
            "::",
            stringify!(compressionLevel)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_preferences_t>())).autoFlush as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_preferences_t),
            "::",
            stringify!(autoFlush)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_preferences_t>())).favorDecSpeed as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_preferences_t),
            "::",
            stringify!(favorDecSpeed)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_preferences_t>())).reserved as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_preferences_t),
            "::",
            stringify!(reserved)
        )
    );
}
extern "C" {
    pub fn LZ4F_compressionLevel_max() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " LZ4F_compressFrameBound() :"]
    #[doc = "  Returns the maximum possible compressed size with LZ4F_compressFrame() given srcSize and preferences."]
    #[doc = " `preferencesPtr` is optional. It can be replaced by NULL, in which case, the function will assume default preferences."]
    #[doc = "  Note : this result is only usable with LZ4F_compressFrame()."]
    #[doc = "         It may also be used with LZ4F_compressUpdate() _if no flush() operation_ is performed."]
    pub fn LZ4F_compressFrameBound(
        srcSize: size_t,
        preferencesPtr: *const LZ4F_preferences_t,
    ) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_compressFrame() :"]
    #[doc = "  Compress an entire srcBuffer into a valid LZ4 frame."]
    #[doc = "  dstCapacity MUST be >= LZ4F_compressFrameBound(srcSize, preferencesPtr)."]
    #[doc = "  The LZ4F_preferences_t structure is optional : you can provide NULL as argument. All preferences will be set to default."]
    #[doc = " @return : number of bytes written into dstBuffer."]
    #[doc = "           or an error code if it fails (can be tested using LZ4F_isError())"]
    pub fn LZ4F_compressFrame(
        dstBuffer: *mut ::std::os::raw::c_void,
        dstCapacity: size_t,
        srcBuffer: *const ::std::os::raw::c_void,
        srcSize: size_t,
        preferencesPtr: *const LZ4F_preferences_t,
    ) -> size_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_cctx_s {
    _unused: [u8; 0],
}
pub type LZ4F_cctx = LZ4F_cctx_s;
pub type LZ4F_compressionContext_t = *mut LZ4F_cctx;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_compressOptions_t {
    pub stableSrc: ::std::os::raw::c_uint,
    pub reserved: [::std::os::raw::c_uint; 3usize],
}
#[test]
fn bindgen_test_layout_LZ4F_compressOptions_t() {
    assert_eq!(
        ::std::mem::size_of::<LZ4F_compressOptions_t>(),
        16usize,
        concat!("Size of: ", stringify!(LZ4F_compressOptions_t))
    );
    assert_eq!(
        ::std::mem::align_of::<LZ4F_compressOptions_t>(),
        4usize,
        concat!("Alignment of ", stringify!(LZ4F_compressOptions_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_compressOptions_t>())).stableSrc as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_compressOptions_t),
            "::",
            stringify!(stableSrc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<LZ4F_compressOptions_t>())).reserved as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_compressOptions_t),
            "::",
            stringify!(reserved)
        )
    );
}
extern "C" {
    pub fn LZ4F_getVersion() -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = " LZ4F_createCompressionContext() :"]
    #[doc = " The first thing to do is to create a compressionContext object, which will be used in all compression operations."]
    #[doc = " This is achieved using LZ4F_createCompressionContext(), which takes as argument a version."]
    #[doc = " The version provided MUST be LZ4F_VERSION. It is intended to track potential version mismatch, notably when using DLL."]
    #[doc = " The function will provide a pointer to a fully allocated LZ4F_cctx object."]
    #[doc = " If @return != zero, there was an error during context creation."]
    #[doc = " Object can release its memory using LZ4F_freeCompressionContext();"]
    pub fn LZ4F_createCompressionContext(
        cctxPtr: *mut *mut LZ4F_cctx,
        version: ::std::os::raw::c_uint,
    ) -> LZ4F_errorCode_t;
}
extern "C" {
    pub fn LZ4F_freeCompressionContext(cctx: *mut LZ4F_cctx) -> LZ4F_errorCode_t;
}
